fixes position add-button on mobile

--- a/src/components/search-form/search-form.scss
+++ b/src/components/search-form/search-form.scss
@@ -123,6 +123,11 @@
     width: 44px;
     height: 44px;
 
+    position: absolute;
+    z-index: 2;
+    bottom: calc(v.$mobileSidebar + 15px);
+    right: 15px;
+
     &:hover svg,
     &:focus svg {
       stroke: v.$white;
